--- a/TP1/SecureCommunication.ipynb
+++ b/TP1/SecureCommunication.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,6 +82,7 @@
     "from cryptography.hazmat.primitives import hashes, hmac\n",
     "from cryptography.hazmat.primitives.ciphers import algorithms, modes\n",
     "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
+    "from cryptography.hazmat.primitives.asymmetric import dsa\n",
     "import os\n",
     "\n",
     "# DH Parameters\n",
@@ -102,11 +103,11 @@
     "    except:\n",
     "        return False\n",
     "\n",
-    "def extractMessage(key, iv, tweak_h, ctxt):\n",
+    "def extractMessage(key, tweak_h, ctxt):\n",
     "    \"\"\" Extracts the plain text from a cryptogram resulting from a tweakable cipher\n",
     "        where ptxt = dec(ctxt ^ hash(tweak)) ^ hash(tweak)\n",
     "    \"\"\"\n",
-    "    decryptor = Cipher(algorithms.AES(key), modes.CFB(iv), backend=default_backend()).decryptor()\n",
+    "    decryptor = Cipher(algorithms.AES(key), modes.CBE(), backend=default_backend()).decryptor()\n",
     "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
     "    return ptxt\n",
     "\n",
@@ -115,6 +116,20 @@
     "    \"\"\"\n",
     "    key = HKDF(hashes.SHA256(), length=key_size, salt=None, info=info, backend=default_backend()).deriveKey(key_base)\n",
     "    return key\n",
+    "\n",
+    "def sign_message(priv_key, msg):\n",
+    "    signature = priv_key.sign(msg,hashes.SHA256())\n",
+    "    return signature + msg\n",
+    "\n",
+    "#verify that the private key associated with a particular public key was used to sign that particular message\n",
+    "def verify_signature(pub_key, msg):\n",
+    "    signature=msg[:256]\n",
+    "    msg=msg[256:]\n",
+    "    try:\n",
+    "        pub_key.verify(signature,msg,hashes.SHA256()\n",
+    "        return True\n",
+    "    except:\n",
+    "        return False\n",
     "    "
    ]
   },
@@ -127,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,35 +156,42 @@
     "    try:\n",
     "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend()) #receive DH parameters\n",
     "        priv_key = parameters.generate_private_key()\n",
-    "        conn.send(priv_key.public_key())                  #send g^y mod p\n",
+    "        #TODO \n",
+    "        sign = sign_message(#TODO,priv_key.public_key())  #send g^y mod p\n",
+    "        conn.send(sign)                  \n",
     "        g_x = conn.recv()\n",
-    "        s_key = priv_key.exchange(g_x)  #generate shared secret\n",
-    "        \n",
-    "        #derive h_key and c_key from s_key\n",
-    "        d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
-    "        c_key = d_key[:128]\n",
-    "        h_key = d_key[128:]\n",
-    "        \n",
-    "        header = 'msgheader'.encode(\"utf-8\")\n",
-    "        content = 'Here is a sample message for testing'\n",
-    "        \n",
-    "        iv = os.urandom(16)\n",
-    "        cipher = Cipher(algorithms.AES(c_key),modes.CFB(iv),backend).encryptor()\n",
-    "        \n",
-    "        #compute tweak hash (tweak_h = hash of tweak value)\n",
-    "        content_new = cipher.update(content.encode(\"utf-8\")) + cipher.finalize()\n",
-    "        \n",
-    "        digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
-    "        tweak_h = digest.update(tweak) + digest.finalize()\n",
-    "        \n",
-    "        #TODO: compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
-    "        m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
-    "        tag = m_hmac.update(header + content_new + iv + tweak_h) + m_hmac.finalize()\n",
-    "        conn.send(tag)\n",
-    "        \n",
-    "        \n",
-    "        payload = {'header': header, 'content': content_new, 'iv':iv, 'm_hmac': m_hmac, 'tweak_h': tweak_h}\n",
-    "        conn.send(payload)\n",
+    "        if verify_signature(#TODO,g_x) and g_x != b\"0\":\n",
+    "            s_key = priv_key.exchange(g_x)  #generate shared secret\n",
+    "\n",
+    "            #derive h_key and c_key from s_key \n",
+    "            d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
+    "            c_key = d_key[:128]\n",
+    "            h_key = d_key[128:]\n",
+    "\n",
+    "            header = 'msgheader'.encode(\"utf-8\")\n",
+    "            content = 'Here is a sample message for testing'\n",
+    "\n",
+    "            cipher = Cipher(algorithms.AES(c_key),modes.CBE(),backend).encryptor()\n",
+    "\n",
+    "\n",
+    "            digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
+    "            tweak_h = digest.update(tweak) + digest.finalize()\n",
+    "\n",
+    "            #compute tweak hash (tweak_h = hash of tweak value)\n",
+    "            content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
+    "\n",
+    "            #TODO: compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
+    "            m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
+    "            tag = m_hmac.update(header + content_new + tweak_h) + m_hmac.finalize()\n",
+    "\n",
+    "            payload = {'header': header, 'content': content_new,'m_hmac': m_hmac, 'tweak_h': tweak_h}\n",
+    "            conn.send(payload)\n",
+    "        else:\n",
+    "            if g_x != b\"0\":\n",
+    "                sign = sign_message(#TODO,b\"0\")\n",
+    "                conn.send(sign)\n",
+    "            else:\n",
+    "                print(\"A verificação na troca de chaves falhou!\")\n",
     "        conn.close()\n",
     "    except:\n",
     "       print(\"Emitter: Error\")"
@@ -180,7 +202,7 @@
    "metadata": {},
    "source": [
     "## Receiver\n",
-    "\n",
+    "## LERRRRRRR\n",
     "O Receiver, após a troca de chaves, e a cada mensagem recebida, efetua uma verificação da autenticidade e integridade da mesma com recurso à função `verifyHMAC` que recebe como parâmetro a chave usada no cálculo do MAC, o MAC esperado e o *input* sobre o qual este deve ser calculado.\n",
     "\n",
     "Caso a mensagem recebida não tenha sido modificada, o `Receiver` procede ao processo de decifragem. Dado tratar-se de\n",
@@ -211,24 +233,32 @@
     "    try:\n",
     "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend())\n",
     "        g_y = conn.recv()\n",
-    "        priv_key = parameters.generate_private_key()\n",
-    "        conn.send(priv_key.public_key())                   #send g^x mod y\n",
-    "        \n",
-    "        s_key = priv_key.exchange(g_y)\n",
-    "        d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
-    "        c_key = d_key[:128]\n",
-    "        h_key = d_key[128:]\n",
-    "        \n",
-    "        payload = conn.recv()\n",
-    "        header = payload['header']\n",
-    "        ctxt = payload['content']\n",
-    "        iv = payload['iv']\n",
-    "        m_hmac = payload['m_hmac']\n",
-    "        tweak_h = payload['tweak_h']\n",
-    "        \n",
-    "        if verifyHMAC(h_key, m_hmac, header+ctxt+iv+tweak_h):\n",
-    "            msg = extractMessage(c_key, ctxt, tweak_h)\n",
-    "            print(\"Received: \" + msg.decode(\"utf-8\"))\n",
+    "        if verify_signature(#TODO,g_y):\n",
+    "            priv_key = parameters.generate_private_key()\n",
+    "            sign = sign_message(#TODO,priv_key.public_key())  #send g^x mod p\n",
+    "            conn.send(sign) \n",
+    "\n",
+    "            s_key = priv_key.exchange(g_y)\n",
+    "            d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
+    "            c_key = d_key[:128]\n",
+    "            h_key = d_key[128:]\n",
+    "\n",
+    "            payload = conn.recv()\n",
+    "            \n",
+    "            if payload != b\"0\":\n",
+    "                header = payload['header']\n",
+    "                ctxt = payload['content']\n",
+    "                m_hmac = payload['m_hmac']\n",
+    "                tweak_h = payload['tweak_h']\n",
+    "\n",
+    "                if verifyHMAC(h_key, m_hmac, header+ctxt+tweak_h):\n",
+    "                    msg = extractMessage(c_key, ctxt, tweak_h)\n",
+    "                    print(\"Received: \" + msg.decode(\"utf-8\"))\n",
+    "            else:\n",
+    "                print(\"A verificação na troca de chaves falhou!\")\n",
+    "       else:\n",
+    "            sign = sign_message(#TODO,b\"0\")\n",
+    "            conn.send(sign) \n",
     "        conn.close()\n",
     "    except:\n",
     "        print(\"Receiver: Erro na decifragem\")"
