Long term keys for DSA are now stored in PEM files

--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -149,19 +149,29 @@
     "from cryptography.hazmat.primitives import hashes, hmac\n",
     "from cryptography.hazmat.backends import default_backend\n",
     "from cryptography.hazmat.primitives.ciphers import (Cipher, algorithms, modes)\n",
+    "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
     "import os\n",
     "\n",
     "def Emitter(conn):\n",
     "    pwd = getpass('Emitter password: ')\n",
     "    try:\n",
+    "        # Generate private key for DH\n",
     "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend()) #receive DH parameters\n",
     "        priv_key = parameters.generate_private_key()\n",
-    "\n",
-    "        sign = sign_message(#TODO,priv_key.public_key())  #send g^y mod p\n",
+    "        \n",
+    "        # Load long-term keys for DSA\n",
+    "        sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()\n",
+    "        ver_key_dump = open(\"receiver_pub.pem\", \"rb\").read()\n",
+    "        sign_key = load_pem_private_key(sign_key_dump, \"123\", backend=default_backend())\n",
+    "        ver_key = load_pem_public_key(ver_key_dump, backend=default_backend())\n",
+    "        \n",
+    "        sign = sign_message(sign_key, priv_key.public_key())\n",
     "        conn.send(sign)                  \n",
     "        g_x = conn.recv()\n",
-    "        if verify_signature(#TODO,g_x) and g_x != b\"0\":\n",
-    "            s_key = priv_key.exchange(g_x)  #generate shared secret\n",
+    "\n",
+    "        if verify_signature(ver_key,g_x) and g_x != b\"0\":\n",
+    "            # Generate shared secret\n",
+    "            s_key = priv_key.exchange(g_x)\n",
     "\n",
     "            #derive h_key and c_key from s_key \n",
     "            d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
@@ -188,7 +198,7 @@
     "            conn.send(payload)\n",
     "        else:\n",
     "            if g_x != b\"0\":\n",
-    "                sign = sign_message(#TODO,b\"0\")\n",
+    "                sign = sign_message(sign_key, b\"0\")\n",
     "                conn.send(sign)\n",
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
@@ -202,7 +212,7 @@
    "metadata": {},
    "source": [
     "## Receiver\n",
-    "## LERRRRRRR\n",
+    "\n",
     "O Receiver, após a troca de chaves, e a cada mensagem recebida, efetua uma verificação da autenticidade e integridade da mesma com recurso à função `verifyHMAC` que recebe como parâmetro a chave usada no cálculo do MAC, o MAC esperado e o *input* sobre o qual este deve ser calculado.\n",
     "\n",
     "Caso a mensagem recebida não tenha sido modificada, o `Receiver` procede ao processo de decifragem. Dado tratar-se de\n",
@@ -219,7 +229,7 @@
     "\n",
     "$$ ptxt = D_k(ctxt \\oplus h(tweak)) \\oplus h(tweak) \\rightarrow D_k(E_k(ptxt \\oplus h(tweak)) \\oplus h(tweak) \\oplus h(tweak)) \\oplus h(tweak) \\rightarrow D_k(E_k(ptxt \\oplus h(tweak))) \\oplus h(tweak) \\rightarrow ptxt \\oplus h(tweak) \\oplus h(tweak) \\rightarrow ptxt $$\n",
     "\n",
-    "Este processo é implementado pela função `extractMessage` que recebe como parâmetros a chave acordada (`key`), o vetor de inicialização (`iv`), o *hash* do *tweak* (`tweak_h`) e o criptograma (`ctxt`), devolvendo o resultado de aplicar a expressão anteriormente apresentada.\n"
+    "Este processo é implementado pela função `extractMessage` que recebe como parâmetros a chave acordada (`key`), o *hash* do *tweak* (`tweak_h`) e o criptograma (`ctxt`), devolvendo o resultado de aplicar a expressão anteriormente apresentada.\n"
    ]
   },
   {
@@ -233,9 +243,17 @@
     "    try:\n",
     "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend())\n",
     "        g_y = conn.recv()\n",
-    "        if verify_signature(#TODO,g_y):\n",
+    "        \n",
+    "        # Load long-term keys for DSA\n",
+    "        ver_key_dump = open(\"emitter_pub.pem\", \"rb\").read()\n",
+    "        sign_key_dump = open(\"receiver_priv.pem\", \"rb\").read()\n",
+    "        ver_key = load_pem_public_key(ver_key_dump, backend = default_backend())\n",
+    "        sign_key = load_pem_private_key(sign_key_dump, \"123\", backend = default_backend())\n",
+    "        \n",
+    "        \n",
+    "        if verify_signature(ver_key,g_y):\n",
     "            priv_key = parameters.generate_private_key()\n",
-    "            sign = sign_message(#TODO,priv_key.public_key())  #send g^x mod p\n",
+    "            sign = sign_message(sign_key,priv_key.public_key())\n",
     "            conn.send(sign) \n",
     "\n",
     "            s_key = priv_key.exchange(g_y)\n",
@@ -257,7 +275,7 @@
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
     "       else:\n",
-    "            sign = sign_message(#TODO,b\"0\")\n",
+    "            sign = sign_message(sign_key,b\"0\")\n",
     "            conn.send(sign) \n",
     "        conn.close()\n",
     "    except:\n",
