--- a/TP1/ECDH_EDSA.ipynb
+++ b/TP1/ECDH_EDSA.ipynb
@@ -103,7 +103,7 @@
     "    \"\"\" Extracts the plain text from a cryptogram resulting from a tweakable cipher\n",
     "        where ptxt = dec(ctxt ^ hash(tweak)) ^ hash(tweak)\n",
     "    \"\"\"\n",
-    "    decryptor = Cipher(algorithms.AES(key), modes.CBE(), backend=default_backend()).decryptor()\n",
+    "    decryptor = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).decryptor()\n",
     "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
     "    return ptxt\n",
     "\n",
@@ -145,23 +145,24 @@
     "from cryptography.hazmat.primitives import hashes, hmac\n",
     "from cryptography.hazmat.backends import default_backend\n",
     "from cryptography.hazmat.primitives.ciphers import (Cipher, algorithms, modes)\n",
-    "import os\n",
-    "\n",
     "from cryptography.hazmat.primitives.asymmetric import ec\n",
     "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
+    "import os\n",
     "\n",
     "\n",
     "def Emitter(conn):\n",
     "    pwd = getpass('Emitter password: ')\n",
     "    try:\n",
-    "        priv_key = ec.generate_private_key(ec.SECP521R1(), default_backend())   #\n",
+    "        priv_key = ec.generate_private_key(ec.SECP521R1(), default_backend())\n",
     "        \n",
-    "            \n",
-    "        sign = sign_message(#TODO,priv_key.public_key())  #send g^y mod p\n",
+    "        #TODO: load private key (sign_key) from file\n",
+    "        sign = sign_message(sign_key, priv_key.public_key())  #send g^y mod p\n",
     "        conn.send(sign)                  \n",
     "        g_x = conn.recv()\n",
-    "        if verify_signature(#TODO,g_x) and g_x != b\"0\":\n",
-    "            s_key = priv_key.exchange(ec.ECDH(),g_x)  #generate shared secret\n",
+    "\n",
+    "        #TODO: load public key (ver_key) from file\n",
+    "        if verify_signature(ver_key,g_x) and g_x != b\"0\":\n",
+    "            s_key = priv_key.exchange(ec.ECDH(), g_x)  #generate shared secret\n",
     "\n",
     "            #derive h_key and c_key from s_key \n",
     "            d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
@@ -171,7 +172,7 @@
     "            header = 'msgheader'.encode(\"utf-8\")\n",
     "            content = 'Here is a sample message for testing'\n",
     "\n",
-    "            cipher = Cipher(algorithms.AES(c_key),modes.CBE(),backend).encryptor()\n",
+    "            cipher = Cipher(algorithms.AES(c_key),modes.ECB(),backend).encryptor()\n",
     "\n",
     "\n",
     "            digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
@@ -188,7 +189,8 @@
     "            conn.send(payload)\n",
     "        else:\n",
     "            if g_x != b\"0\":\n",
-    "                sign = sign_message(#TODO,b\"0\")\n",
+    "                #TODO: load private key (sign_key) from file\n",
+    "                sign = sign_message(sign_key, b\"0\")\n",
     "                conn.send(sign)\n",
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
@@ -202,7 +204,7 @@
    "metadata": {},
    "source": [
     "## Receiver\n",
-    "## LERRRRRRR\n",
+    "\n",
     "O Receiver, após a troca de chaves, e a cada mensagem recebida, efetua uma verificação da autenticidade e integridade da mesma com recurso à função `verifyHMAC` que recebe como parâmetro a chave usada no cálculo do MAC, o MAC esperado e o *input* sobre o qual este deve ser calculado.\n",
     "\n",
     "Caso a mensagem recebida não tenha sido modificada, o `Receiver` procede ao processo de decifragem. Dado tratar-se de\n",
@@ -219,7 +221,8 @@
     "\n",
     "$$ ptxt = D_k(ctxt \\oplus h(tweak)) \\oplus h(tweak) \\rightarrow D_k(E_k(ptxt \\oplus h(tweak)) \\oplus h(tweak) \\oplus h(tweak)) \\oplus h(tweak) \\rightarrow D_k(E_k(ptxt \\oplus h(tweak))) \\oplus h(tweak) \\rightarrow ptxt \\oplus h(tweak) \\oplus h(tweak) \\rightarrow ptxt $$\n",
     "\n",
-    "Este processo é implementado pela função `extractMessage` que recebe como parâmetros a chave acordada (`key`), o vetor de inicialização (`iv`), o *hash* do *tweak* (`tweak_h`) e o criptograma (`ctxt`), devolvendo o resultado de aplicar a expressão anteriormente apresentada.\n"
+    "Este processo é implementado pela função `extractMessage` que recebe como parâmetros a chave acordada (`key`), o *hash* do *tweak* (`tweak_h`) e o criptograma (`ctxt`), devolvendo o resultado de aplicar a expressão anteriormente apresentada.\n",
+    "Dado ser utilizado em modo *tweaked*, é usado o modo ECB (*Electronic Code Book*) para a cifra AES.\n"
    ]
   },
   {
@@ -232,9 +235,11 @@
     "    pwd = getpass('Reciever password: ')\n",
     "    try:\n",
     "        g_y = conn.recv()\n",
-    "        if verify_signature(#TODO,g_y):\n",
-    "            priv_key = ec.generate_private_key(ec.SECP521R1(), default_backend()) #\n",
-    "            sign = sign_message(#TODO,priv_key.public_key())  #send g^x mod p\n",
+    "        #TODO: load public key (ver_key) from file\n",
+    "        if verify_signature(ver_key,g_y):\n",
+    "            priv_key = ec.generate_private_key(ec.SECP521R1(), default_backend())\n",
+    "            #TODO: load private key (sign_key) from file\n",
+    "            sign = sign_message(sign_key,priv_key.public_key())  #send g^x mod p\n",
     "            conn.send(sign) \n",
     "\n",
     "            s_key = priv_key.exchange(ec.ECDH(),g_y)\n",
@@ -256,7 +261,8 @@
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
     "       else:\n",
-    "            sign = sign_message(#TODO,b\"0\")\n",
+    "            #TODO: load private key (sign_key) from file\n",
+    "            sign = sign_message(sign_key,b\"0\")\n",
     "            conn.send(sign) \n",
     "        conn.close()\n",
     "    except:\n",
