--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -12,9 +12,8 @@
    "metadata": {},
    "source": [
     "Construção de uma sessão síncrona de comunicação segura entre dois agentes (o Emitter e o Receiver), combinando os seguintes elementos constituintes:\n",
-    "a cifra simétrica TAES (AES na sua versão tweak) usando autenticação do criptograma em cada superbloco; \n",
-    "o protocolo de acordo de chaves Diffie-Hellman com verificação da chave, e autenticação dos agentes através do esquema de assinaturas DSA.\n",
-    "Use chaves DH/DSA de 3072 bits para acordo de chaves e autenticação dos agentes. Tenha em muita atenção os tempos de vida diferentes para as chaves acordadas (chaves de sessão) e as chaves no esquema de assinaturas (chaves “permanentes”)."
+    "- a cifra simétrica TAES (AES na sua versão tweak) usando autenticação do criptograma em cada superbloco; \n",
+    "- o protocolo de acordo de chaves Diffie-Hellman com verificação da chave, e autenticação dos agentes através do esquema de assinaturas DSA."
    ]
   },
   {
@@ -68,7 +67,7 @@
    "metadata": {},
    "source": [
     "O uso do esquema Encrypt-then-MAC permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
-    "Como tal, a cifra simétrica escolhida foi o AES (Advanced Encryption Standard) em modo CFB (Cipher Feedback Mode).\n",
+    "Como tal, a cifra simétrica escolhida foi o AES (Advanced Encryption Standard) em modo ECB(Electronic Code Book).\n",
     "O MAC (Message Authentication Code) escolhido foi o HMAC (Hash-MAC) com SHA-256 que permite, por sua vez, garantir a integridade e autenticidade da mensagem trocada."
    ]
   },
@@ -105,7 +104,7 @@
     "    \"\"\" Extracts the plain text from a cryptogram resulting from a tweakable cipher\n",
     "        where ptxt = dec(ctxt ^ hash(tweak)) ^ hash(tweak)\n",
     "    \"\"\"\n",
-    "    decryptor = Cipher(algorithms.AES(key), modes.CBE(), backend=default_backend()).decryptor()\n",
+    "    decryptor = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).decryptor()\n",
     "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
     "    return ptxt\n",
     "\n",
@@ -116,11 +115,14 @@
     "    return key\n",
     "\n",
     "def sign_message(priv_key, msg):\n",
+    "    \"\"\" Signs a particular message with a given private key\n",
+    "    \"\"\"\n",
     "    signature = priv_key.sign(msg,hashes.SHA256())\n",
     "    return signature + msg\n",
     "\n",
-    "#verify that the private key associated with a particular public key was used to sign that particular message\n",
     "def verify_signature(pub_key, msg):\n",
+    "    \"\"\" Verify that the private key associated with a particular public key was used to sign that particular message\n",
+    "    \"\"\"\n",
     "    signature=msg[:256]\n",
     "    msg=msg[256:]\n",
     "    try:\n",
@@ -135,7 +137,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Emitter"
+    "## Emitter\n",
+    "\n",
+    "O Emiter começa por gerar as chaves privadas, conforme o protocolo de acordo de chaves Diffie-Hellman, armazenando-as em variáveis. De seguida extrai as chaves para assinar e verificar as assinaturas DSA, que estavam armazenadas em ficheiros com nomes alusivos a cada uma dessas operações.\n",
+    "\n",
+    "Com recurso às funções `sign_message` e `verify_signature` efetua-se nomeadamente a assinatura e a respetiva verificação da mesma. Sendo que a primeira recebe como parâmetros a chave privada para assinar (`sign_key`) e a mensagem `priv_key.public_key()` e a segunda recebe a chave pública (`ver_key`) e a mensagem `g_x`.\n",
+    "\n",
+    "Se durante a comunicação Emitter-Receiver não existir nenhuma falha ao nível da verificação da troca de chaves, i.e., se a seguinte coondição: g_x != b\"0\" se verificar, determina-se a chave acordada no  protocolo DH (`s_key`). E recorrendo a esta e à função `deriveKey` gera-se a chave da cifra e a chave do HMAC.\n",
+    "\n",
+    "Posteriormente calcula-se o hash do valor do tweak (`tweak_h`) e ainda o HMAC de header + content_new + iv + tweak_h(`m_hmac`). De modo a que a autenticação seja feita via uma *tag* que deve ser introduzida no momento de decifragem dos dados e, caso não corresponda ao valor esperado, resulta numa exceção.\n",
+    "\n",
+    "Para além da mensagem trocada entre os dois interveniente são ainda enviados dados que permitem a sua decifragem\n",
+    "por parte do `Receiver` nomeadamente o a *tag* esperada\n",
+    "para decifrar os mesmos e ainda os metadados previamente autenticados:\n",
+    "\n",
+    "payload = {'header': header, 'content': content_new, 'm_hmac': m_hmac, 'tweak_h': tweak_h}\n",
+    "\n",
+    "\n",
+    "OBSERVAÇÃO/SUGESTÃO: Não devrriamos colocar a expressaõ que esta no Receiver aqui??????????"
    ]
   },
   {
@@ -156,7 +175,7 @@
     "        # Generate private key for DH\n",
     "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend()) #receive DH parameters\n",
     "        priv_key = parameters.generate_private_key()\n",
-    "        tweak = os.urandom(16)\n",
+    "        tweak = os.urandom(16)               #########??????? Não deveria ser um contador?\n",
     "        \n",
     "        # Load long-term keys for DSA\n",
     "        sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()\n",
@@ -169,7 +188,7 @@
     "        g_x = conn.recv()\n",
     "\n",
     "        if verify_signature(ver_key,g_x) and g_x != b\"0\":\n",
-    "            # Generate shared secret\n",
+    "            #Generate shared secret\n",
     "            s_key = priv_key.exchange(g_x)\n",
     "            \n",
     "            #derive h_key and c_key from s_key \n",
@@ -183,7 +202,7 @@
     "                #content = 'Here is a sample message for testing with tweak' + tweak\n",
     "                content = raw_input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
     "\n",
-    "                cipher = Cipher(algorithms.AES(c_key),modes.CBE(),backend).encryptor()\n",
+    "                cipher = Cipher(algorithms.AES(c_key),modes.ECB(),backend).encryptor()\n",
     "\n",
     "                digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
     "                tweak_h = digest.update(tweak) + digest.finalize()\n",
@@ -191,7 +210,7 @@
     "                #compute tweak hash (tweak_h = hash of tweak value)\n",
     "                content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
     "\n",
-    "                #TODO: compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
+    "                #compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
     "                m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
     "                tag = m_hmac.update(header + content_new + tweak_h) + m_hmac.finalize()\n",
     "\n",
