--- a/TP1/ECDH_EDSA.ipynb
+++ b/TP1/ECDH_EDSA.ipynb
@@ -12,9 +12,8 @@
    "metadata": {},
    "source": [
     "Construção de uma sessão síncrona de comunicação segura entre dois agentes (o Emitter e o Receiver), combinando os seguintes elementos constituintes:\n",
-    "a cifra simétrica TAES (AES na sua versão tweak) usando autenticação do criptograma em cada superbloco; \n",
-    "o protocolo de acordo de chaves Diffie-Hellman com verificação da chave, e autenticação dos agentes através do esquema de assinaturas DSA.\n",
-    "Use chaves DH/DSA de 3072 bits para acordo de chaves e autenticação dos agentes. Tenha em muita atenção os tempos de vida diferentes para as chaves acordadas (chaves de sessão) e as chaves no esquema de assinaturas (chaves “permanentes”)."
+    "- a cifra simétrica TAES (AES na sua versão tweak) usando autenticação do criptograma em cada superbloco; \n",
+    "- o protocolo de acordo de chaves ECDH com verificação da chave, e autenticação dos agentes através do esquema de assinaturas ECDSA."
    ]
   },
   {
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,11 +155,17 @@
     "        priv_key = ec.generate_private_key(ec.SECP521R1(), default_backend())\n",
     "        \n",
     "        #TODO: load private key (sign_key) from file\n",
+    "        sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()                #\n",
+    "        sign_key = load_pem_private_key(sign_key_dump, \"123\", backend=default_backend()) #\n",
+    "        \n",
     "        sign = sign_message(sign_key, priv_key.public_key())  #send g^y mod p\n",
     "        conn.send(sign)                  \n",
     "        g_x = conn.recv()\n",
     "\n",
     "        #TODO: load public key (ver_key) from file\n",
+    "        ver_key_dump = open(\"receiver_pub.pem\", \"rb\").read()            #\n",
+    "        ver_key = load_pem_public_key(ver_key_dump, backend=default_backend())    #\n",
+    "        \n",
     "        if verify_signature(ver_key,g_x) and g_x != b\"0\":\n",
     "            s_key = priv_key.exchange(ec.ECDH(), g_x)  #generate shared secret\n",
     "\n",
@@ -181,7 +186,7 @@
     "            #compute tweak hash (tweak_h = hash of tweak value)\n",
     "            content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
     "\n",
-    "            #TODO: compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
+    "            #compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
     "            m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
     "            tag = m_hmac.update(header + content_new + tweak_h) + m_hmac.finalize()\n",
     "\n",
@@ -190,6 +195,9 @@
     "        else:\n",
     "            if g_x != b\"0\":\n",
     "                #TODO: load private key (sign_key) from file\n",
+    "                sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()                #\n",
+    "                sign_key = load_pem_private_key(sign_key_dump, \"123\", backend=default_backend()) #\n",
+    "            \n",
     "                sign = sign_message(sign_key, b\"0\")\n",
     "                conn.send(sign)\n",
     "            else:\n",
@@ -236,9 +244,15 @@
     "    try:\n",
     "        g_y = conn.recv()\n",
     "        #TODO: load public key (ver_key) from file\n",
+    "        ver_key_dump = open(\"receiver_pub.pem\", \"rb\").read()            #\n",
+    "        ver_key = load_pem_public_key(ver_key_dump, backend=default_backend())    #\n",
+    "        \n",
     "        if verify_signature(ver_key,g_y):\n",
     "            priv_key = ec.generate_private_key(ec.SECP521R1(), default_backend())\n",
     "            #TODO: load private key (sign_key) from file\n",
+    "            sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()                #\n",
+    "            sign_key = load_pem_private_key(sign_key_dump, \"123\", backend=default_backend()) #\n",
+    "            \n",
     "            sign = sign_message(sign_key,priv_key.public_key())  #send g^x mod p\n",
     "            conn.send(sign) \n",
     "\n",
@@ -262,6 +276,9 @@
     "                print(\"A verificação na troca de chaves falhou!\")\n",
     "       else:\n",
     "            #TODO: load private key (sign_key) from file\n",
+    "            sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()                #\n",
+    "            sign_key = load_pem_private_key(sign_key_dump, \"123\", backend=default_backend()) #\n",
+    "            \n",
     "            sign = sign_message(sign_key,b\"0\")\n",
     "            conn.send(sign) \n",
     "        conn.close()\n",
