--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,6 +40,8 @@
     "        self.rproc = Process(target = right, args=(right_end,))\n",
     "        self.left = lambda : left(left_end)\n",
     "        self.right = lambda : right(right_end)\n",
+    "        genDSAKeyPair(\"emitter\")\n",
+    "        genDSAKeyPair(\"receiver\")\n",
     "        \n",
     "    def auto(self, proc=None):\n",
     "        if proc == None:\n",
@@ -66,6 +68,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Chaves de longa duração\n",
+    "\n",
+    "A geração de chaves de longa duração é implementada pela função `genDSAKeyPair` que gera um par de chaves para assinaturas DSA e guarda cada uma em ficheiros **PEM**.\n",
+    "A chave privada é armazenada com recurso ao formato **PKCS8**.\n",
+    "Cada par de chaves é gerado apenas na criação da conexão **i.e.** chamada do construtor da classe `Connection`, mantendo-se constante para ligações estabelecidas na mesma instância da classe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cryptography.hazmat.primitives import serialization\n",
+    "\n",
+    "def genDSAKeyPair(fname):\n",
+    "    privKeyF = open(fname+\"_priv.pem\", 'wb')\n",
+    "    pubKeyF = open(fname+\"_pub.pem\", 'wb')\n",
+    "   \n",
+    "    privKey = dsa.generate_private_key(\n",
+    "         key_size=2048,\n",
+    "         backend=default_backend()\n",
+    "    )\n",
+    "    pubKey = privKey.public_key()\n",
+    "    \n",
+    "    privKeyDump = privKey.private_bytes(\n",
+    "        encoding=serialization.Encoding.PEM,\n",
+    "        format=serialization.PrivateFormat.PKCS8,\n",
+    "        encryption_algorithm=serialization.BestAvailableEncryption(fname.encode(\"ascii\")) # Store encrypted key\n",
+    "    )\n",
+    "    pubKeyDump = pubKey.public_bytes(\n",
+    "        encoding=serialization.Encoding.PEM,\n",
+    "        format=serialization.PublicFormat.SubjectPublicKeyInfo\n",
+    "    )\n",
+    "\n",
+    "    privKeyF.write(privKeyDump)\n",
+    "    privKeyF.close()\n",
+    "    pubKeyF.write(pubKeyDump)\n",
+    "    pubKeyF.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "O uso do esquema Encrypt-then-MAC permite garantir a autenticidade, integridade e confidencialidade das mensagens trocadas entre o `Emitter` e o `Receiver`.\n",
     "Como tal, a cifra simétrica escolhida foi o AES (Advanced Encryption Standard) em modo ECB(Electronic Code Book).\n",
     "O MAC (Message Authentication Code) escolhido foi o HMAC (Hash-MAC) com SHA-256 que permite, por sua vez, garantir a integridade e autenticidade da mensagem trocada."
@@ -73,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,32 +152,30 @@
     "        where ptxt = dec(ctxt ^ hash(tweak)) ^ hash(tweak)\n",
     "    \"\"\"\n",
     "    decryptor = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).decryptor()\n",
-    "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
+    "    #ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
+    "    ptxt = decryptor.update(ctxt)\n",
     "    return ptxt\n",
     "\n",
     "def deriveKey(key_base, key_size, info):\n",
     "    \"\"\" Expands key from key_base to key_size bytes\n",
     "    \"\"\"\n",
-    "    key = HKDF(hashes.SHA256(), length=key_size, salt=None, info=info, backend=default_backend()).deriveKey(key_base)\n",
+    "    key = HKDF(hashes.SHA256(), length=key_size, salt=None, info=info, backend=default_backend()).derive(key_base)\n",
     "    return key\n",
     "\n",
     "def sign_message(priv_key, msg):\n",
     "    \"\"\" Signs a particular message with a given private key\n",
     "    \"\"\"\n",
     "    signature = priv_key.sign(msg,hashes.SHA256())\n",
-    "    return signature + msg\n",
+    "    return {'sig': signature, 'msg' : msg}\n",
     "\n",
-    "def verify_signature(pub_key, msg):\n",
+    "def verify_signature(pub_key, signature, msg):\n",
     "    \"\"\" Verify that the private key associated with a particular public key was used to sign that particular message\n",
     "    \"\"\"\n",
-    "    signature=msg[:256]\n",
-    "    msg=msg[256:]\n",
     "    try:\n",
     "        pub_key.verify(signature,msg,hashes.SHA256())\n",
     "        return True\n",
     "    except:\n",
-    "        return False\n",
-    "    "
+    "        return False"
    ]
   },
   {
@@ -159,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,67 +212,77 @@
     "from cryptography.hazmat.backends import default_backend\n",
     "from cryptography.hazmat.primitives.ciphers import (Cipher, algorithms, modes)\n",
     "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
+    "from cryptography.hazmat.primitives.asymmetric import dh\n",
     "import os\n",
     "\n",
     "def Emitter(conn):\n",
-    "    pwd = getpass('Emitter password: ')\n",
     "    try:\n",
-    "        # Generate private key for DH\n",
-    "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend()) #receive DH parameters\n",
-    "        priv_key = parameters.generate_private_key()\n",
-    "        tweak = os.urandom(16)               #########??????? Não deveria ser um contador?\n",
-    "        \n",
-    "        # Load long-term keys for DSA\n",
+    "        # Load long-term keys\n",
     "        sign_key_dump = open(\"emitter_priv.pem\", \"rb\").read()\n",
-    "        ver_key_dump = open(\"receiver_pub.pem\", \"rb\").read()\n",
-    "        sign_key = load_pem_private_key(sign_key_dump, \"123\", backend=default_backend())\n",
-    "        ver_key = load_pem_public_key(ver_key_dump, backend=default_backend())\n",
+    "        sign_key = load_pem_private_key(sign_key_dump, \"emitter\".encode(\"ascii\"), backend=default_backend())\n",
     "        \n",
-    "        sign = sign_message(sign_key, priv_key.public_key())\n",
-    "        conn.send(sign)                  \n",
-    "        g_x = conn.recv()\n",
+    "        ver_key_dump = open(\"receiver_pub.pem\", \"rb\").read()\n",
+    "        ver_key = load_pem_public_key(ver_key_dump, backend=default_backend()) \n",
+    "        \n",
+    "        # Session keys\n",
+    "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend())\n",
+    "        priv_key = parameters.generate_private_key()\n",
+    "        public_key_pem = priv_key.public_key().public_bytes(\n",
+    "                                        encoding=serialization.Encoding.PEM,\n",
+    "                                        format=serialization.PublicFormat.SubjectPublicKeyInfo\n",
+    "                                        )\n",
+    "        tweak = os.urandom(16)       \n",
     "\n",
-    "        if verify_signature(ver_key,g_x) and g_x != b\"0\":\n",
+    "        payload = sign_message(sign_key, public_key_pem)\n",
+    "        conn.send(payload)                \n",
+    "        \n",
+    "        payload = conn.recv()\n",
+    "        if verify_signature(ver_key, payload['sig'], payload['msg']) and payload['msg'] != b\"0\":\n",
+    "            g_y = load_pem_public_key(payload['msg'], backend=default_backend())\n",
     "            #Generate shared secret\n",
-    "            s_key = priv_key.exchange(g_x)\n",
+    "            s_key = priv_key.exchange(g_y)\n",
     "            \n",
     "            #derive h_key and c_key from s_key \n",
-    "            d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
-    "            c_key = d_key[:128]\n",
-    "            h_key = d_key[128:]\n",
-    "\n",
+    "            d_key = deriveKey(s_key, 32, b\"DH Key Exchange\")\n",
+    "            c_key = d_key[:16]\n",
+    "            h_key = d_key[16:]\n",
     "            resp = b\"1\"\n",
     "            while resp != b\"0\":\n",
     "                header = 'TAES+HMAC_SHA256 Message'.encode(\"utf-8\")\n",
-    "                #content = 'Here is a sample message for testing with tweak' + tweak\n",
-    "                content = raw_input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
+    "                content = '1234567890123456'\n",
+    "                # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
     "\n",
-    "                cipher = Cipher(algorithms.AES(c_key),modes.ECB(),backend).encryptor()\n",
+    "                cipher = Cipher(algorithms.AES(c_key), modes.ECB(), backend=default_backend()).encryptor()\n",
     "\n",
     "                digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
-    "                tweak_h = digest.update(tweak) + digest.finalize()\n",
+    "                digest.update(tweak)\n",
+    "                tweak_h = digest.finalize()\n",
     "\n",
     "                #compute tweak hash (tweak_h = hash of tweak value)\n",
-    "                content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
+    "                #content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
+    "                content_new = (cipher.update(content.encode(\"utf-8\")) + cipher.finalize())\n",
     "\n",
     "                #compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
     "                m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
-    "                tag = m_hmac.update(header + content_new + tweak_h) + m_hmac.finalize()\n",
+    "                m_hmac.update(header + content_new + tweak_h)\n",
+    "                tag = m_hmac.finalize()\n",
     "\n",
-    "                payload = {'header': header, 'content': content_new, 'm_hmac': m_hmac, 'tweak_h': tweak_h}\n",
+    "                payload = {'header': header, 'content': content_new, 'm_hmac': tag, 'tweak_h': tweak_h}\n",
     "                conn.send(payload)\n",
-    "                tweak += 1\n",
+    "                #ensure tweak is a nonce\n",
+    "                # tweak += 1\n",
     "                resp = conn.recv()\n",
     "                \n",
     "        else:\n",
-    "            if g_x != b\"0\":\n",
-    "                sign = sign_message(sign_key, b\"0\")\n",
-    "                conn.send(sign)\n",
+    "            if payload['msg'] != b\"0\":\n",
+    "                payload = sign_message(sign_key, b\"0\")\n",
+    "                conn.send(payload)\n",
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
     "        conn.close()\n",
-    "    except:\n",
-    "       print(\"Emitter: Error\")"
+    "    except Exception as e:\n",
+    "        print(\"Emitter:\" + e)\n",
+    "        print(\"Emitter: Error\")"
    ]
   },
   {
@@ -257,33 +312,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from cryptography.hazmat.primitives.asymmetric import dh\n",
+    "\n",
     "def Receiver(conn):\n",
-    "    pwd = getpass('Reciever password: ')\n",
     "    try:\n",
-    "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend())\n",
-    "        g_y = conn.recv()\n",
-    "        \n",
-    "        # Load long-term keys for DSA\n",
-    "        ver_key_dump = open(\"emitter_pub.pem\", \"rb\").read()\n",
+    "        # Load long-term keys\n",
     "        sign_key_dump = open(\"receiver_priv.pem\", \"rb\").read()\n",
+    "        sign_key = load_pem_private_key(sign_key_dump, \"receiver\".encode(\"ascii\"), backend = default_backend())\n",
+    "        \n",
+    "        ver_key_dump = open(\"emitter_pub.pem\", \"rb\").read()\n",
     "        ver_key = load_pem_public_key(ver_key_dump, backend = default_backend())\n",
-    "        sign_key = load_pem_private_key(sign_key_dump, \"123\", backend = default_backend())\n",
     "        \n",
-    "        \n",
-    "        if verify_signature(ver_key,g_y):\n",
+    "        # Session keys\n",
+    "        parameters = dh.DHParameterNumbers(P,G).parameters(backend=default_backend())\n",
+    "\n",
+    "        payload = conn.recv()\n",
+    "        if verify_signature(ver_key, payload['sig'], payload['msg']):\n",
     "            priv_key = parameters.generate_private_key()\n",
-    "            sign = sign_message(sign_key,priv_key.public_key())\n",
-    "            conn.send(sign) \n",
+    "            public_key_pem = priv_key.public_key().public_bytes(\n",
+    "                                                encoding=serialization.Encoding.PEM,\n",
+    "                                                format=serialization.PublicFormat.SubjectPublicKeyInfo)\n",
+    "            \n",
+    "            g_x = load_pem_public_key(payload['msg'], backend=default_backend())\n",
+    "            \n",
+    "            payload = sign_message(sign_key,public_key_pem)\n",
+    "            conn.send(payload) \n",
     "\n",
-    "            s_key = priv_key.exchange(g_y)\n",
-    "            d_key = deriveKey(key, 32, b\"DH Key Exchange\")\n",
-    "            c_key = d_key[:128]\n",
-    "            h_key = d_key[128:]\n",
-    "\n",
+    "            s_key = priv_key.exchange(g_x)\n",
+    "            d_key = deriveKey(s_key, 32, b\"DH Key Exchange\")\n",
+    "            c_key = d_key[:16]\n",
+    "            h_key = d_key[16:]\n",
     "            payload = conn.recv()\n",
     "            conn_alive = True\n",
     "            \n",
@@ -295,9 +357,9 @@
     "                    tweak_h = payload['tweak_h']\n",
     "\n",
     "                    if verifyHMAC(h_key, m_hmac, header+ctxt+tweak_h):\n",
-    "                        msg = extractMessage(c_key, ctxt, tweak_h)\n",
+    "                        msg = extractMessage(c_key, tweak_h, ctxt)\n",
     "                        conn.send(msg)\n",
-    "                        print(\"Received: \" + msg.decode(\"utf-8\"))\n",
+    "                        print(\"Received: \" + msg)\n",
     "                        conn_alive = (msg != b\"0\")\n",
     "                    else:\n",
     "                        conn.send(b\"0\")\n",
@@ -309,11 +371,12 @@
     "                    \n",
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
-    "       else:\n",
+    "        else:\n",
     "            sign = sign_message(sign_key,b\"0\")\n",
-    "            conn.send(sign) \n",
+    "            conn.send(sign)\n",
     "        conn.close()\n",
-    "    except:\n",
+    "    except Exception as e:\n",
+    "        print(\"Receiver:\" + e)\n",
     "        print(\"Receiver: Erro na decifragem\")"
    ]
   },
@@ -324,6 +387,45 @@
     "O estabelecimento de uma conexão entre os dois intervenientes (`Emitter` e `Receiver`)  é feita invocando o método `auto` da classe `Connection` que cria uma comunicação síncrona entre ambos. \n",
     "Este sincronismo é exigido pelo protocolo de troca de chaves (Diffie Hellman)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process Process-186:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-225-29a16738ff23>\", line 44, in Receiver\n",
+      "    print(\"Received: \" + msg)\n",
+      "TypeError: can only concatenate str (not \"bytes\") to str\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/Cellar/python/3.7.2_2/Frameworks/Python.framework/Versions/3.7/lib/python3.7/multiprocessing/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/usr/local/Cellar/python/3.7.2_2/Frameworks/Python.framework/Versions/3.7/lib/python3.7/multiprocessing/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"<ipython-input-225-29a16738ff23>\", line 61, in Receiver\n",
+      "    print(\"Receiver:\" + e)\n",
+      "TypeError: can only concatenate str (not \"TypeError\") to str\n"
+     ]
+    }
+   ],
+   "source": [
+    "Connection(Emitter, Receiver, timeout=10).auto()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -342,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
