--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -152,8 +152,7 @@
     "        where ptxt = dec(ctxt ^ hash(tweak)) ^ hash(tweak)\n",
     "    \"\"\"\n",
     "    decryptor = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).decryptor()\n",
-    "    #ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
-    "    ptxt = decryptor.update(ctxt)\n",
+    "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
     "    return ptxt\n",
     "\n",
     "def deriveKey(key_base, key_size, info):\n",
@@ -230,8 +229,7 @@
     "        public_key_pem = priv_key.public_key().public_bytes(\n",
     "                                        encoding=serialization.Encoding.PEM,\n",
     "                                        format=serialization.PublicFormat.SubjectPublicKeyInfo\n",
-    "                                        )\n",
-    "        tweak = os.urandom(16)       \n",
+    "                                        )      \n",
     "\n",
     "        payload = sign_message(sign_key, public_key_pem)\n",
     "        conn.send(payload)                \n",
@@ -246,6 +244,7 @@
     "            d_key = deriveKey(s_key, 32, b\"DH Key Exchange\")\n",
     "            c_key = d_key[:16]\n",
     "            h_key = d_key[16:]\n",
+    "            tweak = os.urandom(16)\n",
     "            resp = b\"1\"\n",
     "            while resp != b\"0\":\n",
     "                header = 'TAES+HMAC_SHA256 Message'.encode(\"utf-8\")\n",
@@ -259,8 +258,7 @@
     "                tweak_h = digest.finalize()\n",
     "\n",
     "                #compute tweak hash (tweak_h = hash of tweak value)\n",
-    "                #content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
-    "                content_new = (cipher.update(content.encode(\"utf-8\")) + cipher.finalize())\n",
+    "                content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
     "\n",
     "                #compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
     "                m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
@@ -372,8 +370,8 @@
     "            else:\n",
     "                print(\"A verificação na troca de chaves falhou!\")\n",
     "        else:\n",
-    "            sign = sign_message(sign_key,b\"0\")\n",
-    "            conn.send(sign)\n",
+    "            response = sign_message(sign_key,b\"0\")\n",
+    "            conn.send(response)\n",
     "        conn.close()\n",
     "    except Exception as e:\n",
     "        print(\"Receiver:\" + e)\n",
