--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +129,7 @@
     "from cryptography.hazmat.primitives.ciphers import algorithms, modes\n",
     "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
     "from cryptography.hazmat.primitives.asymmetric import dsa\n",
+    "from cryptography.hazmat.primitives.padding import PKCS7\n",
     "import os\n",
     "\n",
     "# DH Parameters\n",
@@ -152,8 +153,9 @@
     "        where ptxt = dec(ctxt ^ hash(tweak)) ^ hash(tweak)\n",
     "    \"\"\"\n",
     "    decryptor = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).decryptor()\n",
-    "    ptxt = (decryptor.update(ctxt ^ tweak_h) + decryptor.finalize()) ^ tweak_h\n",
-    "    return ptxt\n",
+    "    unpadder = PKCS7(128).unpadder()\n",
+    "    ptxt = (decryptor.update(tweak_xoring(ctxt, tweak_h)) + decryptor.finalize())\n",
+    "    return (unpadder.update(ptxt) + unpadder.finalize())\n",
     "\n",
     "def deriveKey(key_base, key_size, info):\n",
     "    \"\"\" Expands key from key_base to key_size bytes\n",
@@ -174,7 +176,16 @@
     "        pub_key.verify(signature,msg,hashes.SHA256())\n",
     "        return True\n",
     "    except:\n",
-    "        return False"
+    "        return False\n",
+    "    \n",
+    "def tweak_xoring(msg, tweak):\n",
+    "    \"\"\" Xor msg with tweak in 16 byte blocks, size of tweak\n",
+    "    \"\"\"\n",
+    "    xored_res = []\n",
+    "    for i in range(0, len(msg), len(tweak)):\n",
+    "        for k in range(0, min(len(tweak), len(msg)-i)):\n",
+    "            xored_res.append(msg[i+k] ^ tweak[k])\n",
+    "    return msg"
    ]
   },
   {
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,6 +223,7 @@
     "from cryptography.hazmat.primitives.ciphers import (Cipher, algorithms, modes)\n",
     "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
     "from cryptography.hazmat.primitives.asymmetric import dh\n",
+    "from cryptography.hazmat.primitives.padding import PKCS7\n",
     "import os\n",
     "\n",
     "def Emitter(conn):\n",
@@ -248,19 +260,23 @@
     "            resp = b\"1\"\n",
     "            while resp != b\"0\":\n",
     "                header = 'TAES+HMAC_SHA256 Message'.encode(\"utf-8\")\n",
-    "                content = '1234567890123456'\n",
+    "                content = '1234567812345678123456781234567'.encode(\"utf-8\")\n",
     "                # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
     "\n",
+    "                padder = PKCS7(128).padder()\n",
+    "                content = padder.update(content) + padder.finalize()\n",
+    "                \n",
+    "                print(len(content))\n",
     "                cipher = Cipher(algorithms.AES(c_key), modes.ECB(), backend=default_backend()).encryptor()\n",
     "\n",
     "                digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
     "                digest.update(tweak)\n",
     "                tweak_h = digest.finalize()\n",
     "\n",
-    "                #compute tweak hash (tweak_h = hash of tweak value)\n",
-    "                content_new = (cipher.update(content.encode(\"utf-8\") ^ tweak_h) + cipher.finalize())^tweak_h\n",
+    "                # Compute tweak hash (tweak_h = hash of tweak value)\n",
+    "                content_new = (cipher.update(tweak_xoring(content, tweak_h)) + cipher.finalize())\n",
     "\n",
-    "                #compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
+    "                # Compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
     "                m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
     "                m_hmac.update(header + content_new + tweak_h)\n",
     "                tag = m_hmac.finalize()\n",
@@ -310,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +373,7 @@
     "                    if verifyHMAC(h_key, m_hmac, header+ctxt+tweak_h):\n",
     "                        msg = extractMessage(c_key, tweak_h, ctxt)\n",
     "                        conn.send(msg)\n",
-    "                        print(\"Received: \" + msg)\n",
+    "                        print(\"Received: \" + msg.decode(\"utf-8\"))\n",
     "                        conn_alive = (msg != b\"0\")\n",
     "                    else:\n",
     "                        conn.send(b\"0\")\n",
@@ -390,40 +406,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Process Process-186:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-225-29a16738ff23>\", line 44, in Receiver\n",
-      "    print(\"Received: \" + msg)\n",
-      "TypeError: can only concatenate str (not \"bytes\") to str\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/Cellar/python/3.7.2_2/Frameworks/Python.framework/Versions/3.7/lib/python3.7/multiprocessing/process.py\", line 297, in _bootstrap\n",
-      "    self.run()\n",
-      "  File \"/usr/local/Cellar/python/3.7.2_2/Frameworks/Python.framework/Versions/3.7/lib/python3.7/multiprocessing/process.py\", line 99, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"<ipython-input-225-29a16738ff23>\", line 61, in Receiver\n",
-      "    print(\"Receiver:\" + e)\n",
-      "TypeError: can only concatenate str (not \"TypeError\") to str\n"
-     ]
-    }
-   ],
-   "source": [
-    "Connection(Emitter, Receiver, timeout=10).auto()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Connection(Emitter, Receiver, timeout=10).au"
+   ]
   }
  ],
  "metadata": {
