Correct application of TAES scheme

--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
     "    decryptor = Cipher(algorithms.AES(key), modes.ECB(), backend=default_backend()).decryptor()\n",
     "    unpadder = PKCS7(128).unpadder()\n",
     "    ptxt = (decryptor.update(tweak_xoring(ctxt, tweak_h)) + decryptor.finalize())\n",
-    "    return (unpadder.update(ptxt) + unpadder.finalize())\n",
+    "    return tweak_xoring(unpadder.update(ptxt) + unpadder.finalize(), tweak_h)\n",
     "\n",
     "def deriveKey(key_base, key_size, info):\n",
     "    \"\"\" Expands key from key_base to key_size bytes\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
     "                tweak_h = digest.finalize()\n",
     "\n",
     "                # Compute tweak hash (tweak_h = hash of tweak value)\n",
-    "                content_new = (cipher.update(tweak_xoring(content, tweak_h)) + cipher.finalize())\n",
+    "                content_new = tweak_xoring(cipher.update(tweak_xoring(content, tweak_h)) + cipher.finalize(), tweak_h) \n",
     "\n",
     "                # Compute HMAC of header+content_new+iv+tweak_h and send in tag\n",
     "                m_hmac = hmac.HMAC(h_key, hashes.SHA256(), backend = default_backend())\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Connection(Emitter, Receiver, timeout=10).au"
+    "Connection(Emitter, Receiver, timeout=10).auto()"
    ]
   }
  ],
