Tweak is now a true nonce

--- a/TP1/ECDH_EDSA.ipynb
+++ b/TP1/ECDH_EDSA.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
     "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
     "from cryptography.hazmat.primitives.kdf.hkdf import HKDF\n",
     "from cryptography.hazmat.primitives.padding import PKCS7\n",
-    "import os\n",
+    "import os, time\n",
     "\n",
     "\n",
     "def Emitter(conn):\n",
@@ -240,7 +240,6 @@
     "            d_key = deriveKey(s_key, 32, b\"ECDH Key Exchange\")\n",
     "            c_key = d_key[:16]\n",
     "            h_key = d_key[16:]\n",
-    "            tweak = os.urandom(16)\n",
     "            resp = b\"1\"\n",
     "            \n",
     "            while resp != b\"0\":\n",
@@ -251,6 +250,9 @@
     "                padder = PKCS7(128).padder()\n",
     "                content = padder.update(content) + padder.finalize()\n",
     "\n",
+    "                # Set tweak (nonce) to current time since epoch in seconds + 8 byte random value\n",
+    "                tweak = str(time.time()).encode(\"utf-8\")[:8]+os.urandom(8)\n",
+    "                \n",
     "                cipher = Cipher(algorithms.AES(c_key),modes.ECB(),backend=default_backend()).encryptor()\n",
     "\n",
     "                digest = hashes.Hash(hashes.SHA256(), backend = default_backend())\n",
@@ -267,8 +269,6 @@
     "\n",
     "                payload = {'header': header, 'content': content,'m_hmac': tag, 'tweak_h': tweak_h}\n",
     "                conn.send(payload)\n",
-    "                # Ensure tweak is a nonce\n",
-    "                # tweak += 1\n",
     "                resp = conn.recv()\n",
     "        else:\n",
     "            if payload['msg'] != b\"0\":\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
