--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
     "from cryptography.hazmat.primitives.serialization import load_pem_private_key, load_pem_public_key\n",
     "from cryptography.hazmat.primitives.asymmetric import dh\n",
     "from cryptography.hazmat.primitives.padding import PKCS7\n",
-    "import os\n",
+    "import os, time\n",
     "\n",
     "def Emitter(conn):\n",
     "    try:\n",
@@ -256,13 +256,16 @@
     "            d_key = deriveKey(s_key, 32, b\"DH Key Exchange\")\n",
     "            c_key = d_key[:16]\n",
     "            h_key = d_key[16:]\n",
-    "            tweak = os.urandom(16)\n",
+    "            \n",
     "            resp = b\"1\"\n",
     "            while resp != b\"0\":\n",
     "                header = 'TAES+HMAC_SHA256 Message'.encode(\"utf-8\")\n",
     "                content = '1234567812345678123456781234567'.encode(\"utf-8\")\n",
     "                # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
-    "\n",
+    "                \n",
+    "                # Set tweak (nonce) to current time since epoch in seconds + 8 byte random value\n",
+    "                tweak = str(time.time()).encode(\"utf-8\")[:8]+os.urandom(8)\n",
+    "                \n",
     "                padder = PKCS7(128).padder()\n",
     "                content = padder.update(content) + padder.finalize()\n",
     "                \n",
@@ -282,8 +285,6 @@
     "\n",
     "                payload = {'header': header, 'content': content_new, 'm_hmac': tag, 'tweak_h': tweak_h}\n",
     "                conn.send(payload)\n",
-    "                #ensure tweak is a nonce\n",
-    "                # tweak += 1\n",
     "                resp = conn.recv()\n",
     "                \n",
     "        else:\n",
@@ -325,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
