Lower portion of the epoch is taken to decrease chance of repeating nonce

--- a/TP1/DH_DSA.ipynb
+++ b/TP1/DH_DSA.ipynb
@@ -264,7 +264,7 @@
     "                # content = input(\"Enter a message to send to Receiver (to close the connection send 0): \")\n",
     "                \n",
     "                # Set tweak (nonce) to current time since epoch in seconds + 8 byte random value\n",
-    "                tweak = str(time.time()).encode(\"utf-8\")[:8]+os.urandom(8)\n",
+    "                tweak = str(time.time()).encode(\"utf-8\")[-8:]+os.urandom(8)\n",
     "                \n",
     "                padder = PKCS7(128).padder()\n",
     "                content = padder.update(content) + padder.finalize()\n",
