--- a/TP1/ECDH_EDSA.ipynb
+++ b/TP1/ECDH_EDSA.ipynb
@@ -251,7 +251,7 @@
     "                content = padder.update(content) + padder.finalize()\n",
     "\n",
     "                # Set tweak (nonce) to current time since epoch in seconds + 8 byte random value\n",
-    "                tweak = str(time.time()).encode(\"utf-8\")[:8]+os.urandom(8)\n",
+    "                tweak = str(time.time()).encode(\"utf-8\")[-8:]+os.urandom(8)\n",
     "                \n",
     "                cipher = Cipher(algorithms.AES(c_key),modes.ECB(),backend=default_backend()).encryptor()\n",
     "\n",
